changed swagger docs and tests to maximum_loan_amount and minimum_loan_amount var names to match models and readme instructions
