# swagger/v1/swagger.yaml
@@ -180,22 +180,22 @@ components:
     CreateMerchantConfigRequest:
       type: object
       properties:
-        minimum_amount:
+        minimum_loan_amount:
           type: integer
           description: Minimum amount (in cents) that a consumer can get a loan for.
-        maximum_amount:
+        maximum_loan_amount:
           type: integer
           description: Maximum amount (in cents) that a consumer can get a loan for.
         prequal_enabled:
           type: boolean
           description: Flag indicating if Prequal feature is enabled for this merchant.
       required:
-      - minimum_amount
-      - maximum_amount
+      - minimum_loan_amount
+      - maximum_loan_amount
       - prequal_enabled
       example:
-        minimum_amount: 30000
-        maximum_amount: 200000
+        minimum_loan_amount: 30000
+        maximum_loan_amount: 200000
         prequal_enabled: true
     CreateMerchantConfigResponse:
       type: object
